Making digitaldisplay plugin compatible with version 3.1.0

--- a/modules/p2-profile/iot-core-profile/pom.xml
+++ b/modules/p2-profile/iot-core-profile/pom.xml
@@ -436,7 +436,7 @@
                                     org.wso2.carbon.devicemgt-plugins:org.wso2.carbon.appmgt.mdm.osgiconnector.feature:${carbon.device.mgt.plugin.version}
                                 </featureArtifactDef>
                                 <featureArtifactDef>
-                                    org.wso2.carbon.devicemgt-plugins:org.wso2.carbon.appmgt.mdm.restconnector.feature:3.0.10-SNAPSHOT
+                                    org.wso2.carbon.devicemgt-plugins:org.wso2.carbon.appmgt.mdm.restconnector.feature:${carbon.device.mgt.plugin.version}
                                 </featureArtifactDef>
                                 <!-- Mobile Device Management Features END -->
 
@@ -865,7 +865,7 @@
                                 </feature>
                                 <feature>
                                     <id>org.wso2.carbon.appmgt.mdm.restconnector.feature.group</id>
-                                    <version>3.0.10-SNAPSHOT</version>
+                                    <version>${carbon.device.mgt.plugin.version}</version>
                                 </feature>
                                 <!-- End of Mobile Features -->
 
@@ -1634,7 +1634,7 @@
                                 </feature>
                                 <feature>
                                     <id>org.wso2.carbon.appmgt.mdm.restconnector.feature.group</id>
-                                    <version>3.0.10-SNAPSHOT</version>
+                                    <version>${carbon.device.mgt.plugin.version}</version>
                                 </feature>
                                 <!-- End of app management features-->
                                 <feature>
@@ -2051,7 +2051,7 @@
                                 </feature>
                                 <feature>
                                     <id>org.wso2.carbon.appmgt.mdm.restconnector.feature.group</id>
-                                    <version>3.0.10-SNAPSHOT</version>
+                                    <version>${carbon.device.mgt.plugin.version}</version>
                                 </feature>
                                 <!-- End of app management features-->
                                 <feature>
@@ -2555,7 +2555,7 @@
                                 </feature>
                                 <feature>
                                     <id>org.wso2.carbon.appmgt.mdm.restconnector.feature.group</id>
-                                    <version>3.0.10-SNAPSHOT</version>
+                                    <version>${carbon.device.mgt.plugin.version}</version>
                                 </feature>
                                 <!-- End of app management features-->
 
@@ -3270,7 +3270,7 @@
                                 </feature>
                                 <feature>
                                     <id>org.wso2.carbon.appmgt.mdm.restconnector.feature.group</id>
-                                    <version>3.0.10-SNAPSHOT</version>
+                                    <version>${carbon.device.mgt.plugin.version}</version>
                                 </feature>
                                 <!-- End of app management features-->
 
